- Possibilité de choisir entre nom complet et nom court des évaluations dans les relevés de notes.

Cahiers de textes 1 et 2:
- Possibilité de choisir le nombre de fichiers uploadés lors de l'enregistrement d'une notice.

Cahiers de textes 2:
- Ajout d'une visionneuse Instrumenpoche.
- Mise à jour de l'appli GeoGebra.
- Possibilité de copier d'un clic le code source HTML d'une vignette.

Discipline:
- Possibilité de donner l'accès parent/élève aux incidents le concernant, 
  mais sans afficher les détails de l'incident 
  (pour inciter à un contact téléphonique avec le CPE).
- Ajout de tableaux des derniers incidents et des sanctions à venir.
- Ajout de la liste des PJ dans la variable 'travail' sur le fichier produit.

Orientation:
- Facilité de saisie globale de l'orientation pour une classe donnée.

AID:
- Possibilité de désigner comme "professeur" un compte scolarité ou cpe.
- Possibilité de déléguer la gestion de catégories à des personnels (scolarité, 
  cpe ou professeur).
- Possibilité de déclarer des professeurs, gestionnaires, super-gestionnaires par lots.

Épreuves blanches:
- Possibilité d'exporter les notes en CSV sur un autre référentiel que 20.

LSUN et Socle:
- Ajout d'un mode pour permettre des saisies différentes par les professeurs 
  sans que celles de l'un écrasent celles de l'autre.
  Un professeur principal, cpe ou compte scolarité selon ce qui est paramétré 
  effectue un bilan pour remontée LSU.

Épreuves blanches:
- Possibilité d'inclure le nom de salle sur les étiquettes.
- Ajout d'un modèle ODT (OpenDocument) pour les feuilles d'émargement.
- Possibilité de générer des convocations élèves au format ODT (OpenDocument).

Bibliothèques:
- Mise à jour de TinyButStrong en version 3.11.0 (PHP 5 and 7) (2019-02-10)
- Mise à jour du plugin openTBS de TinyButStrong en version 1.9.12 (2019-03-10)
- Mise à jour de PHPMailer en version 6.0.7 (pour php>=5.3)
  Avec ajout d'un mode pour From et Reply-to.